fix colors and descripton

--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -623,19 +623,19 @@ form .form-group
     transition: all .5s
 
   &.red
-    background: #aa0936
+    background: $red
     color: white
-    border-color: #aa0936
+    border-color: $red
 
     &:hover
-      background: #aa0936
-      border-color: #aa0936
+      background: $red
+      border-color: $red
       color: white
 
     &:after
 
     &:before
-      background: #92022a
+      background: $redhover
 
     &:hover
       &:after, &:before
@@ -666,8 +666,8 @@ form .form-group
     border-color: #dcdcdc
 
     &:hover
-      // background: #aa0936;
-      // border-color: #aa0936;
+      // background: $red;
+      // border-color: $red;
       // color: white;
 
     &:after
@@ -886,7 +886,7 @@ header .btn
 
   .title1
     color: black
-    border-left: 6px solid #aa0936
+    border-left: 6px solid $red
     font-size: 46px
     background: rgba(255, 255, 255, 0.7)
     text-transform: uppercase
@@ -905,10 +905,10 @@ header .btn
 
     span
       text-transform: none
-      color: #aa0936
+      color: $red
 
       b
-        color: #aa0936
+        color: $red
         font-weight: 500
 
     &:after
@@ -928,7 +928,7 @@ header .btn
 
     .title2_text
       color: black
-      border-right: 6px solid #aa0936
+      border-right: 6px solid $red
       font-size: 25px
       background: rgba(255, 255, 255, 0.7)
       text-transform: uppercase
@@ -949,7 +949,7 @@ header .btn
         font-family: $default-font
         font-weight: 700
         display: inline-block
-        color: #aa0936
+        color: $red
 
       .normal
         font-family: $default-font
@@ -992,7 +992,7 @@ header .btn
     color: #0c3d52
 
   b
-    color: #aa0936
+    color: $red
 
     i
       font-style: normal
@@ -1076,7 +1076,7 @@ header .btn
         font-style: normal
 
       &:hover
-        background: #92022a
+        background: $redhover
 
 #form1
   box-sizing: border-box
@@ -1098,7 +1098,7 @@ header .btn
       font-size: 24px
       display: block
       padding-bottom: 12px
-      color: #aa0936
+      color: $red
       text-transform: none
       line-height: 100%
 
@@ -1202,7 +1202,7 @@ header .btn
       text-transform: none
       text-align: center
       padding-left: 0
-      background: #aa0936
+      background: $red
 
       &:before
         content: ''
@@ -1243,7 +1243,7 @@ header .btn
 
     .car_title
       font-size: 30px
-      color: #aa0936
+      color: $red
       font-weight: bold
       line-height: 100%
       position: relative
@@ -1256,7 +1256,7 @@ header .btn
         display: block
 
       b
-        color: #aa0936
+        color: $red
         font-size: 24px
 
         &.show
@@ -1308,7 +1308,7 @@ header .btn
         border-left: 29px solid transparent
 
     &.current a, a:hover
-      border-color: #aa0936
+      border-color: $red
 
 .cars_items > li
   .props
@@ -1323,7 +1323,7 @@ header .btn
       display: block
 
     span
-      color: #aa0936
+      color: $red
 
     .cred
       font-size: 24px
@@ -1346,7 +1346,7 @@ header .btn
         color: #ffffff
         width: 45px
         height: 45px
-        background: #aa0936
+        background: $red
         display: flex
         align-items: center
         justify-content: center
@@ -1379,7 +1379,7 @@ header .btn
       content: ''
       width: 20px
       height: 20px
-      background: #aa0936
+      background: $red
       position: absolute
       top: 16px
       left: 0px
@@ -1397,7 +1397,7 @@ header .btn
     span font
       font-size: 18px
       font-family: $default-font
-      color: #aa0936
+      color: $red
       text-transform: none
 
 .font_bold
@@ -1412,7 +1412,7 @@ header .btn
 
   .title
     font-size: 24px
-    border-left: 5px solid #aa0936
+    border-left: 5px solid $red
     padding-left: 10px
     line-height: 100%
     padding-top: 2px
@@ -1468,7 +1468,7 @@ header .btn
 
     position: relative
     display: block
-    border-left: 6px solid #aa0936
+    border-left: 6px solid $red
     background: #283e49
     color: white
     text-decoration: none
@@ -1497,7 +1497,7 @@ header .btn
 
     b
       font-size: 30px
-      color: #aa0936
+      color: $red
 
     span
       color: #283e49
@@ -1505,8 +1505,8 @@ header .btn
   .gos_button
     width: 30%
     background: white
-    border: 2px solid #aa0936
-    color: #aa0936
+    border: 2px solid $red
+    color: $red
 
     &:hover
       color: white
@@ -1572,7 +1572,7 @@ header .btn
   padding: 20px 0
 
 #form5
-  border-right: 6px solid #aa0936
+  border-right: 6px solid $red
   background: rgba(235, 235, 235, 0.7)
   padding: 40px 45px
   width: 55%
@@ -1628,8 +1628,8 @@ header .btn
 .dist_work_block .btn
   width: 30%
   background: white
-  border: 2px solid #aa0936
-  color: #aa0936
+  border: 2px solid $red
+  color: $red
 
   &:hover
     color: white
@@ -1670,7 +1670,7 @@ header .btn
       font-size: 24px
       display: block
       padding-bottom: 12px
-      color: #aa0936
+      color: $red
       text-transform: none
       line-height: 100%
 
@@ -1775,7 +1775,7 @@ header .btn
     span
       display: block
       padding-bottom: 12px
-      color: #aa0936
+      color: $red
       text-transform: none
       line-height: 100%
 
@@ -1941,7 +1941,7 @@ footer .disclamer
     display: none
 
   .cars_items > li .image_container .vigoda
-    color: #aa0936
+    color: $red
     font-size: 20px
     padding-bottom: 47px
 
@@ -2380,7 +2380,7 @@ footer .disclamer
 
     .title2_text
       color: black
-      border-left: 6px solid #aa0936
+      border-left: 6px solid $red
       border-right: none
       font-size: 25px
       background: none
@@ -3018,7 +3018,7 @@ footer .disclamer
 
           span
             font-family: $default-font
-            color: #aa0936
+            color: $red
             font-size: 20px
 
       .props
@@ -3036,7 +3036,7 @@ footer .disclamer
           color: #02923c
 
         .hit b
-          color: #aa0936
+          color: $red
 
         .day_car b
           color: #0095d6
