--- a/resources/sass/_vars.sass
+++ b/resources/sass/_vars.sass
@@ -5,3 +5,9 @@ $black: #000
 $white: #fff
 $accent: tomato
 $text: #002e42
+
+$red: #c3002f
+$redhover: #920023
+$greeey: #eee
+$dark: #1a1a1a
+$grey34: #343434
