--- a/resources/sass/_vars.sass
+++ b/resources/sass/_vars.sass
@@ -3,7 +3,7 @@ $default-font: "Nissan-font", sans-serif
 
 $black: #000
 $white: #fff
-$accent: tomato
+// $accent: tomato
 $text: #002e42
 
 $red: #c3002f
@@ -11,3 +11,6 @@ $redhover: #920023
 $greeey: #eee
 $dark: #1a1a1a
 $grey34: #343434
+
+$blue: #002e42
+$bluehover: #05425d
