тест анимации (aos)

--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -1919,7 +1919,7 @@ footer .disclamer
 //IPAD PRO BEGIN
 @media (min-width: 768px) and (max-width: 1199px)
   body
-    background: url(../img/bg1.jpg) 75% 60px no-repeat
+    background: url(../img/nissan-lending-main-autumn-mobile.jpg) 75% 60px no-repeat
 
   .title1_container
     padding-top: 11px
