--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -9,6 +9,11 @@
 	background-color: $red
 	color: #fff
 
+*,
+*::before,
+*::after
+   box-sizing: border-box
+
 body input:focus:required:invalid,
 body textarea:focus:required:invalid
 	color: $red
@@ -25,7 +30,6 @@ body
   padding: 0px
   font-weight: 400
   overflow-x: hidden
-  background: url(../img/nissan-lending-main-autumn.jpg) 50% 62px no-repeat
 
 .bg_gray
   background: #e8e8e8
@@ -152,28 +156,33 @@ a:hover
   margin: 0px auto
   padding: 0px 15px
   max-width: 1140px
+  width: 100%
   position: relative
 
 @media (min-width: 576px)
   .container
-    width: 540px
-    max-width: 100%
+    max-width: 540px
+    width: 100%
 
 @media (min-width: 768px)
   .container
-    width: 720px
-    max-width: 100%
+    max-width: 720px
+    width: 100%
 
 @media (min-width: 992px)
   .container
-    width: 960px
-    max-width: 100%
+    max-width: 960px
+    width: 100%
 
 @media (min-width: 1200px)
   .container
-    width: 1140px
-    max-width: 100%
+    max-width: 1140px
+    width: 100%
 
+@media (max-width: 576px)
+  .container
+    max-width: 540px
+    width: 100%
 .row
   position: relative
   float: none
@@ -870,17 +879,20 @@ header .btn
   15%
     opacity: 0.25
 
-// .distance_work .text:after 
-//     content: url(../img/arrows.png)
-//     position: absolute
-//     top: 7px
-//     right: 0
-
+.top-banner
+  background: url(../img/nissan-lending-main-autumn.jpg)
+  background-size: cover
+  background-position: center
+  background-repeat: no-repeat
+  width: 100%
+  &__title
+    padding-top: 90px
 .title1_container
-  padding-top: 11px
-  margin-top: 62px
-  margin-bottom: 30px
-
+  min-height: 700px
+  height: 100vh
+  display: flex
+  flex-direction: column
+  justify-content: space-between
   .title1
     color: black
     border-left: 6px solid $red
@@ -888,26 +900,22 @@ header .btn
     background: rgba(255, 255, 255, 0.7)
     text-transform: uppercase
     position: relative
-    line-height: 121%
+    line-height: 1.3
     padding-top: 14px
     padding-left: 18px
     padding-bottom: 12px
-    width: 550px
+    max-width: 550px
     text-align: left
-    max-width: 100%
+    width: 100%
     box-sizing: border-box
-    margin-top: 15px
     display: block
     position: relative
-
     span
       text-transform: none
       color: $red
-
       b
         color: $red
         font-weight: 500
-
     &:after
       content: ''
       display: block
@@ -917,12 +925,10 @@ header .btn
       right: -94px
       top: 0
       width: 94px
-
   .title2
     position: absolute
     top: 0px
     right: 0
-
     .title2_text
       color: black
       border-right: 6px solid $red
@@ -938,21 +944,17 @@ header .btn
       max-width: 100%
       box-sizing: border-box
       margin-top: 25px
-
       .strong
         font-weight: 700
-
       .red
         font-family: $default-font
         font-weight: 700
         display: inline-block
         color: $red
-
       .normal
         font-family: $default-font
         font-weight: 700
         font-size: 18px
-
       &:after
         content: ''
         display: block
@@ -962,18 +964,15 @@ header .btn
         top: 0
         left: -56px
         width: 56px
-
-  > .btn
+  .btn
     height: 43px
     width: 358px
     text-align: left
     margin-top: 25px
     max-width: 100%
-
 .timer
   background: #f6f6f6
   margin-top: 0
-
 .timer_container
   display: flex
   justify-content: space-between
@@ -1001,11 +1000,11 @@ header .btn
   text-transform: uppercase
 
 .advantages_container
-  padding-top: 195px
   display: flex
   justify-content: space-between
   align-items: flex-start
   width: 100%
+  padding-bottom: 15px
 
 .advantages
   margin: 0px
@@ -1015,9 +1014,10 @@ header .btn
   justify-content: space-between
   width: 62%
   max-width: 100%
+  height: 100%
 
   > li
-    width: 18.5%
+    width: 23%
 
     a
       font-family: $default-font
@@ -1026,35 +1026,41 @@ header .btn
       color: white
       text-decoration: none
       background: $red
-      display: block
+      display: flex
+      align-items: center
       padding: 10px
       height: 100%
       box-sizing: border-box
+      padding-top: 40px
+      position: relative
 
       &:before
         content: ''
-        background: url(../img/adv_ico0.png) 0px 0px no-repeat
         width: 30px
-        height: 25px
-        display: block
-        margin-bottom: 10px
-        background-size: contain
-
+        height: 30px
+        display: inline-block
+        position: absolute
+        top: 10px
+      &.ico0:before
+        background: url(../img/adv_ico0.svg)
+        background-size: cover
+        background-position: center
       &.ico1:before
-        background: url(../img/adv_ico1.png) 0px 0px no-repeat
-        background-size: contain
-
+        background: url(../img/adv_ico1.svg)
+        background-size: cover
+        background-position: center
       &.ico2:before
-        background: url(../img/adv_ico2.png) 0px 0px no-repeat
-        background-size: contain
-
+        background: url(../img/adv_ico2.svg)
+        background-size: cover
+        background-position: center
       &.ico3:before
-        background: url(../img/adv_ico3.png) 0px 0px no-repeat
-        background-size: contain
-
+        background: url(../img/adv_ico3.png)
+        background-size: cover
+        background-position: center
       &.ico4:before
-        background: url(../img/adv_ico4.png) 0px 0px no-repeat
-        background-size: contain
+        background: url(../img/adv_ico4.svg)
+        background-size: cover
+        background-position: center
 
       span
         display: block
@@ -2013,17 +2019,11 @@ footer .disclamer
 //IPAD PRO BEGIN
 @media (min-width: 768px) and (max-width: 1199px)
   .title1_container
-    padding-top: 11px
-    margin-top: 60px
-
-    //margin-bottom: 290px;
-
     .title1
       margin-top: 10px
 
   .advantages_container
     width: 100%
-    padding-top: 310px
 
   .menu
     display: none
@@ -2097,26 +2097,38 @@ footer .disclamer
 
 //IPAD BEGIN
 @media (min-width: 768px) and (max-width: 991px)
-  body
-    background: url(../img/nissan-lending-main-autumn-mobile.jpg) 75% 60px no-repeat
+  .top-banner
+    background: url(../img/nissan-lending-main-autumn-mobile.jpg)
+  .title1_container
+    height: auto
+    justify-content: flex-start
+  .advantages_container
+    flex-wrap: wrap
+    margin-top: 30px
+  .advantages
+    width: 100%
+  .advantages>li a
+    padding-top: 60px
+    padding-bottom: 20px
+  #form1
+    width: 50%
+    margin: 30px auto 0
   .cars_items > li .btn.rassrochka
     position: relative
     bottom: unset
-
   header .container
     display: flex
     align-items: center
     justify-content: space-between
-
-    // height: 111px;
     padding: 5px 15px
-
   .logo1
-    max-width: 80%
-
+    max-width: 70px
   .logo2
-    max-width: 22%
-
+    max-width: 120px
+  .worktime
+    display: none
+  .ico_addr:before
+    top: 4px
   header .btn
     font-size: 12px
     white-space: nowrap
@@ -2499,26 +2511,16 @@ footer .disclamer
     margin-top: 20px
 
   .title1_container .title_comment
-    font-size: 30px
+    font-size: 35px
 
   header .container
     align-items: center
     justify-content: space-between
 
-  .logo_container
-
-  .logo1
-    display: none
-
-    &.mob
-      display: block
-
   header .container .anchor
-    order: 1
 
   .logo2
-    max-width: 35%
-    order: 2
+    max-width: 130px
 
   .menu
     display: none
@@ -2540,8 +2542,7 @@ footer .disclamer
 
   .top_phone
     display: block
-    font-size: 20px
-    order: 3
+    font-size: 22px
 
   header .btn
     margin-top: 5px
@@ -2551,37 +2552,46 @@ footer .disclamer
     display: none
 
   .title1_container
-    margin-top: 55px
     margin-bottom: 0
+    height: auto
+  .advantages>li a
+    padding-bottom: 15px
+    padding-top: 50px
 
     .title1
-      font-size: 26px
-      margin-bottom: 10px
+      font-size: 28px
       margin-top: 0
 
       span
-        font-size: 18px
-        line-height: 100%
+        font-size: 22px
+        br
+          display: none
 
       &:after
 
     .btn
       width: 100%
-
+  
     .title1
       span b
         font-size: 24px
 
       &:after
         display: none
-
+  .title1_container .title1
+    padding-right: 18px
+    font-size: 34px
+  .title1_container .btn
+    width: 100%
   .advantages_container
     display: block
     padding-top: 30px
-    margin-top: 20px
+    margin-top: 30px
     padding: 0
-    margin-bottom: 40px
+    margin-bottom: 20px
     width: 100%
+  .title1_container .title1:after
+    display: none
 
   .cars_items > li:last-child
     margin-top: 50px
@@ -2862,13 +2872,30 @@ footer .disclamer
     background: url(../img/banner_mob.jpg) 50% 0px no-repeat
     background-size: 110%
     background-position: 40% 144px
-
+  .top-banner__title
+    padding-top: 70px
+  .top_phone
+    font-size: 15px
+    font-weight: 700
+  .logo1
+    max-width: 50px
+  .logo2
+    max-width: 80px
+  .advantages>li a span
+    font-size: 12px
+  .advantages>li a strong
+    font-size: 13px
   .title1_container
     .title1
       font-size: 21px
+      margin: 0
 
     .title_comment
       font-size: 26px
+  .title1_container .btn, .advantages_container, #form1 .agree_field
+    margin-top: 15px
+  .title1_container .btn
+    font-size: 16px
 
 @media (max-width: 390px)
   .title1_container .title1
@@ -2913,22 +2940,12 @@ footer .disclamer
       font-size: 12px
 
 @media (max-width: 320px)
-  body
-    background-position: 85% 230px
+  .title1
+    font-size: 24px
+    padding-left: 10px
 
-  .banner
-    // background-position: center 170px;
-
-  .title1_container
-    margin-top: 45px
-
-    .title1
-      font-size: 24px
-      margin-bottom: 20px
-      padding-left: 10px
-
-    .title_comment
-      font-size: 22px
+  .title_comment
+    font-size: 22px
 
   .timer_container
     .mtimer
