--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -971,6 +971,23 @@ header .btn
     font-size: 40px
     text-transform: uppercase
 
+.Dtimer
+   .etTitle
+      margin: 0 !important
+   .etSign
+      font-size: 16px !important
+      color: #787878 !important
+      margin-top: -12px !important
+      margin-left: 8px !important
+
+.Dtimer .etUnit .etNumber
+   width: 38px !important
+
+#myDate, #myMonth
+   font-size: inherit !important
+   padding-bottom: 0 !important
+   display: inline-block !important
+
 .title1_container .title1
   span
     color: #0c3d52
@@ -2155,7 +2172,7 @@ footer .disclamer
       text-transform: uppercase
       width: 100%
       text-align: center
-      margin-bottom: 20px
+      margin-bottom: 0
 
   .title1_container .title2 .title2_text
     width: 333px
@@ -2944,6 +2961,14 @@ footer .disclamer
       max-width: 460px
    .cars_items>li .props_price a, .cars_items>li .props_price .cred
       font-size: 19px
+   .advantages
+      width: 63%
+   .advantages>li
+      width: 24%
+   .advantages>li a
+      font-size: 12px
+   .advantages>li a strong
+      font-size: 16px
 
 @media (max-width: 992px)
    .cars_items>li
@@ -3014,6 +3039,8 @@ footer .disclamer
          bottom: 0
          right: 0
          margin-top: 15px
+   .advantages
+      width: 100%
 
 @media (max-width: 768px)
    .cars_items>li .image_container img
@@ -3048,6 +3075,8 @@ footer .disclamer
       height: 60vw
       align-items: center
       padding-bottom: 20px
+   .advantages>li
+      width: 48%
 
 @media (max-width: 576px)
    .cars_items>li .car_title
@@ -3084,3 +3113,12 @@ footer .disclamer
       font-size: 14px
    .contacts .title2
       font-size: 40px
+   .timer_container .title1
+      font-size: 18px
+      text-align: center
+      padding-left: 0
+   .Dtimer .etUnit .etNumber
+      width: 22px !important
+      font-size: 40px !important
+   .Dtimer .etSep
+      font-size: 40px !important
