--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -2482,7 +2482,7 @@ footer .disclamer
 
   .timer_container
     flex-direction: column
-    padding: 20px 0 0 0
+    padding: 20px 0
 
     .title1
       font-size: 27px
