--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -330,6 +330,12 @@ a:hover
   vertical-align: top
   display: inline-block
 
+.swal-overlay
+  z-index: 100000 !important
+.swal-text
+  text-align: center !important
+  font-weight: 300 !important
+
 form
   .ico_phone:before
     // content:'';
@@ -364,11 +370,11 @@ input[type=text]
 
 #form_popup, #form_popup2
   display: none
+  padding: 30px
 
 .popup_container
   width: 420px
   max-width: 100%
-  padding: 5px 29px 30px
   overflow: hidden
   position: relative
   box-sizing: border-box
